--- a/views/index.html
+++ b/views/index.html
@@ -3,8 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Home Page</title>
+    <style>
+      body{background: skyblue; font-family: verdana; color: #ffff; padding: 30px;}
+      h1{font-size: 48px; text-transform: uppercase; letter-spacing: 2px; text-align: center;}
+      h2{font-size: 24px; text-align: center;}
+      p{font-size: 16px; text-align: center;}
+      img{display: block; margin-left: auto; margin-right: auto; width:40%;}
+    </style>
   </head>
   <body>
     <h1>Welcome!</h1>
+    <p>This is my first NodeJS Project</p>
+    <img src="https://png.pngtree.com/png-clipart/20190515/original/pngtree-beautiful-hologram-water-color-frame-png-image_3643167.jpg">
+    <h2>Martin Christian Solihin<br>(s0568927)</h2>
   </body>
 </html>
